--- a/app/public/dashboard.html
+++ b/app/public/dashboard.html
@@ -84,7 +84,7 @@
                 </div>
             </div>
 
-            <div class="col-sm-6 col-12 col-lg-6 col-xl-6 col-md-6">
+            <div class="col-sm-6 col-12 col-lg-6 col-xl-6 col-md-6 mb-4">
               <div class="card mt-2">
               <div class="col-12">
                 <div class="row">
